carga de archivos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
     <!-- font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -17,8 +17,8 @@
     <div class="header">
         <div class="content-header">
             <ul>
-                <li><img src="/assets/img/logo-sochi.png" alt=""></li>
-                <li><img src="/assets/img/logo-claro-sports.png" alt=""></li>
+                <li><img src="./assets/img/logo-sochi.png" alt=""></li>
+                <li><img src="./assets/img/logo-claro-sports.png" alt=""></li>
             </ul>
         </div>
     </div>
@@ -136,7 +136,7 @@
         <div class="content-footer">
             <ul>
                 <li>Aviso de privacidad/contacto</li>
-                <li><img src="/assets/img/logo-sochi.png" alt=""></li>
+                <li><img src="./assets/img/logo-sochi.png" alt=""></li>
                 <li>
                     <ul class="sociales">
                         <li><i class="fa-brands fa-instagram"></i></li>
